[package]
name = "merustmar"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.10.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.120"
js-sys = "0.3"
getrandom = { version = "0.4.2", features = ["wasm_js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
crossterm = "0.29.0"
